--- a/src/template.html
+++ b/src/template.html
@@ -1,1 +1,4 @@
 <div><h1>{{attributes.title}}</h1><descript></descript></div>
+<br />
+<input type="text" ng-model="answers.response" />
+<h2>{{answers.response}}</h2>
