--- a/dev.html
+++ b/dev.html
@@ -95,7 +95,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<synthetic-angular title="Hello, world"></synthetic-angular>
+	<div>
+		COMPONENT #1
+		<synthetic-angular title="Hello, world"></synthetic-angular>
+	</div>
 </body>
 <script>
 vendor(['test/vendor/angularjs/angular.min.js','http://studio:7777/syntheticjs/synthetic/component.json'], function() {
