--- a/src/template.html
+++ b/src/template.html
@@ -2,3 +2,10 @@
 <br />
 <input type="text" ng-model="answers.response" />
 <h2>{{answers.response}}</h2>
+<h2>Outside: <i>{{answers.outside}}</i></h2>
+<div>
+	Aaaaand this is another component like this:
+	<div>
+		<synthetic-angular2 title="Wow, am I workss??"></synthetic-angular2>
+	</div>
+</div>
