--- a/dev.html
+++ b/dev.html
@@ -95,15 +95,19 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+</body>
+<script id="testscript" type="chunk">
 	<div>
 		COMPONENT #1
-		<synthetic-angular title="Hello, world"></synthetic-angular>
+		<synthetic-angular title="Hello, world">
+		</synthetic-angular>
 	</div>
-</body>
+</script>
 <script>
 vendor(['test/vendor/angularjs/angular.min.js','http://studio:7777/syntheticjs/synthetic/component.json'], function() {
 	vendor(['test/vendor/synthetic-demo/component.json', 'http://studio:7777/syntheticjs/synthetic-angular/component.json'], function() {
-		
+		document.body.innerHTML = document.querySelector('#testscript').innerHTML;
 	});
 });
 </script>
