--- a/src/template2.html
+++ b/src/template2.html
@@ -1,5 +1,6 @@
 <div style="border:1px white solid;padding:10px;">
 	<h1>{{attributes.title}}</h1>
-	<h2>My parent scope is: {{$parent.attributes.title}} {{$parent.answers.response}}
+	<h2>My parent scope is: {{$parent.attributes.title}} {{$parent.answers.response}}</h2>
+	<h3>{{attributes.title2}}</h3>
 	<descript></descript>
 </div>
