--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,6 @@
 <div>
 	Aaaaand this is another component like this:
 	<div>
-		<!--<synthetic-angular2 template="test2" ng-repeat="test in collection" title="{{test}}" title2="i'm two"></synthetic-angular2>-->
+		<synthetic-angular2 template="{{test}}" ng-repeat="test in collection" fx-fx="123" title="{{test}}" title2="i'm two"></synthetic-angular2>
 	</div>
 </div>
